SRAM: Updates and integrate
Note that this SRAM implementation requires new parameters to select
the RAM implementation (plain, block ram, etc.).

YOU WILL NEED TO ADJUST YOUR DESIGNS!

Plain Memory: All memory implementations are expected to have one
cycle delay between setting the address and the output of the
data. This was not the case in the current implementation leading to
memory errors in burst mode.

Fix minor bugs and style issues

 * Add MEM_FILE parameter to toplevel

 * Fix calculation of # of blocks in Spartan 6 BRAM

 * Coding style/indentation/whitespace fixes

 * Various style fixes (no functional changes)

--- a/sram/verilog/README
+++ b/sram/verilog/README
@@ -9,14 +9,14 @@ consisting of three parts:
 - Various memory implementations for different target architectures (e.g. BRAM
   for Xilinx Spartan 6 FPGAs)
 
-The external interface complies to the wishbone bus protocol version
+The external interface complies to the Wishbone bus protocol version
 3, especially with respect to memory addressing and burst modes.
 
 All SRAM memory modules use word addressing and offer byte granularity
 through the use of the "byte select" (sel) signal.
 
 SRAM memories for the moment need to comply with the following rules:
-  
+
   * single cycle access, meaning
 
          + cycle 0 + cycle 1 + cycle 2 +
